--- a/css/style.css
+++ b/css/style.css
@@ -1391,6 +1391,7 @@ p.content-description.dark, .content-title.dark{
     }
     .menu-lateral{
         width: 80px;
+        height: 100dvh;
     }
     .gambi{
         display: flex;
@@ -1547,6 +1548,7 @@ p.content-description.dark, .content-title.dark{
     }
     .menu-lateral{
         width: 80px;
+        height: 100dvh;
     }
     .gambi{
         display: flex;
