--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@
     font-family: "Playfair Display", serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     height: 1100vh;
     background-color: var(--light_corpo);
@@ -981,8 +985,8 @@ p.content-description, .content-title{
     border-radius: 15px;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
-    padding: 30px;
+    justify-content: center;
+    margin-inline: auto;
     top: 0;
     gap: 20px;
 }
@@ -1069,7 +1073,6 @@ p.content-description, .content-title{
 }
 
 /****************************************************** span das informações *******************************************************************/
-
 .span {
 	top: 0;  
 	left: 0;
@@ -1396,16 +1399,16 @@ p.content-description.dark, .content-title.dark{
 
 @media(max-width: 685px) {
     body{
-        height: 1000dvh;
+        height: 1000svh;
     }
     .contencao{
         display:none;
         z-index: 8;
         width: 10px;
     }
-    .menu-lateral{
+    nav.menu-lateral{
         width: 80px;
-        height: 100dvh;
+        height: 100svh;
     }
     .gambi{
         display: flex;
@@ -1414,6 +1417,8 @@ p.content-description.dark, .content-title.dark{
         display: flex;
         font-size: 17px;
         padding-right: 14px;
+        background-color: transparent;
+        border: none;
     }
     .jesus{
         display: none;
@@ -1527,7 +1532,6 @@ p.content-description.dark, .content-title.dark{
     .navegacao{
         width: 100%;
         height: 60dvh;
-        padding-left: 50px;
     }
     .span .tudo-proj img{
         height: 70%;
@@ -1555,16 +1559,16 @@ p.content-description.dark, .content-title.dark{
 
 @media(min-width: 690px) and (max-width: 1100px){
     body{
-        height: 1000dvh;
+        height: 1000svh;
     }
     .contencao{
         display:none;
         z-index: 8;
         width: 10px;
     }
-    .menu-lateral{
+    nav.menu-lateral{
         width: 80px;
-        height: 100dvh;
+        height: 100svh;
     }
     .gambi{
         display: flex;
@@ -1573,6 +1577,8 @@ p.content-description.dark, .content-title.dark{
         display: flex;
         font-size: 30px;
         padding-right: 16px;
+        background-color: transparent;
+        border: none;
     }
     .jesus{
         display: none;
@@ -1681,7 +1687,6 @@ p.content-description.dark, .content-title.dark{
     .navegacao{
         width: 100%;
         height: 60dvh;
-        padding-left: 50px;
     }
     .span .tudo-proj img{
         height: 70%;
