coloquei position fixed no media

--- a/css/style.css
+++ b/css/style.css
@@ -1409,6 +1409,7 @@ p.content-description.dark, .content-title.dark{
     nav.menu-lateral{
         width: 80px;
         height: 100svh;
+        position: fixed;
     }
     .gambi{
         display: flex;
@@ -1569,6 +1570,7 @@ p.content-description.dark, .content-title.dark{
     nav.menu-lateral{
         width: 80px;
         height: 100svh;
+        position: fixed;
     }
     .gambi{
         display: flex;
