--- a/css/style.css
+++ b/css/style.css
@@ -746,6 +746,8 @@ iframe {
     width: 1100px;
     height: 130vh;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
 }
 
 .tab-buttons {
@@ -1712,3 +1714,16 @@ p.content-description.dark, .content-title.dark{
 /*coloqui o whatssap no navbar, deixei ele invisivel para o computador, coloqui outro flutuante*/
 
 /* para funcionar no mobi eu diminui o tamanho da contencao do navbair */
+
+
+
+@media (min-width: 1700px){
+    .conteudo.show{
+        height: 128dvh;
+    }
+
+    .span .tudo-proj  i{
+        right: 22%;
+        top: 17%;
+    }
+}
