--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,20 @@ header ul li a {
     text-shadow: 0 5px 10px #0004;
 }
 
+.slider .list .item .content::after{
+    top: 5%;
+    width: 100%;
+    max-width: 90%;
+    height: 100%;
+    max-height: 100%;
+    transform: translatex(-10%);
+    content: '';
+    position: absolute;
+    background-color: rgba(14, 13, 13, 0.932);
+    z-index: -1;
+    border-radius: 15px;
+}
+
 .slider .list .item .content .title,
 .slider .list .item .content .type{
     font-size: 5em;
@@ -1556,6 +1570,14 @@ p.content-description.dark, .content-title.dark{
          font-size: 8px; /* Ajuste o tamanho da fonte conforme necessário */
          padding: 1px; /* Ajuste o padding conforme necessário */
      }
+     .slider .list .item .content::after{
+        top: 1%;
+        width: 100%;
+        max-width: 90%;
+        height: 100%;
+        max-height: 100%;
+        padding-right: 30%;;
+    }
 }
 
 
@@ -1618,7 +1640,12 @@ p.content-description.dark, .content-title.dark{
     header ul li a{
         font-size: 30px;
     }
-
+    .slider .list .item .content{
+        left: 45%;
+    }
+    .slider .list .item .content .title{
+        font-size: 66px;
+    }
     .habili{
         height: 150dvh;
     }
@@ -1710,6 +1737,14 @@ p.content-description.dark, .content-title.dark{
          font-size: 14px; /* Ajuste o tamanho da fonte conforme necessário */
          padding: 4px; /* Ajuste o padding conforme necessário */
      }
+     .slider .list .item .content::after{
+        top: 1%;
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
+        max-height: 100%;
+        transform: translateX(0%);
+    }
 }
 /*coloqui o whatssap no navbar, deixei ele invisivel para o computador, coloqui outro flutuante*/
 
